--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "appId": "com.creai.app",
     "asar": "false",
     "extraResources": [
-      "stocksDB.db"
+      "coinDB.db"
     ],
     "productName": "CreAI",
     "win": {
@@ -49,13 +49,13 @@
   },
   "dependencies": {
     "@tensorflow/tfjs-node": "^1.5.2",
-    "alphavantage": "^1.2.0",
+    "alphavantage": "^2.0.1",
     "bcrypt": "^4.0.0",
     "bootstrap": "^4.3.1",
-    "chart.js": "^2.7.3",
+    "chart.js": "^2.9.3",
     "currency-symbol-map": "^4.0.4",
     "jquery": "^3.3.1",
-    "popper.js": "^1.15.0",
+    "popper.js": "^1.16.1",
     "sqlite3": "^4.1.1"
   }
 }
