--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "currency-symbol-map": "^4.0.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.16.1",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "lodash": "^4.17.15"
   }
 }
