--- a/package.json
+++ b/package.json
@@ -57,6 +57,15 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.16.1",
     "sqlite3": "^4.1.1",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "ava": "^3.5.0",
+    "cryptocurrencies": "^7.0.0",
+    "electron-settings": "^3.2.0",
+    "electron-window-state": "^5.0.3",
+    "html5sortable": "^0.9.17",
+    "isomorphic-fetch": "^2.2.1",
+    "lodash.sortby": "^4.7.0",
+    "sortablejs": "^1.10.2",
+    "xo": "^0.27.2"
   }
 }
